# backpy

./: .gitignore  .pre-commit-config.yaml  ASSETS_LEGAL.rst  ASSETS_LICENSE.rst  LICENSE  README.md  README.rst  logs.txt  pyproject.toml
.github/workflows/: changelog.yml  ci.yml  docs.yml
backpy/: __init__.py  exceptions.py  version.py
backpy/cli/: backpy.py  cli.py  colors.py  elements.py
backpy/core/: backup.py  backup_space.py  compression.py  configuration.py  file_backup_space.py  file_backups.py  manager.py  password.py  pathtest.ipynb  remote.py  times.py  types.py  utils.py  variables.py
docs/: conf.py  index.rst
docs/_extensions/: no_ansi.py
docs/_static/: custom.css
docs/about/: acknowledgements.rst  changelog.rst  index.rst  license.rst  roadmap.rst  usage-of-generative-ai.rst
docs/api/: backpy.cli.colors.EFFECTS.rst  backpy.cli.colors.PALETTE.rst  backpy.cli.colors.effect.rst  backpy.cli.colors.get_default_palette.rst  backpy.cli.colors.rgb_to_ansi.rst  backpy.cli.elements.BackupInput.rst  backpy.cli.elements.BackupSpaceInput.rst  backpy.cli.elements.ConfirmInput.rst  backpy.cli.elements.DirectoryPathInput.rst  backpy.cli.elements.EnumerationInput.rst  backpy.cli.elements.FilePathInput.rst  backpy.cli.elements.FloatInput.rst  backpy.cli.elements.IntegerInput.rst  backpy.cli.elements.MemorySizeInput.rst  backpy.cli.elements.PasswordInput.rst  backpy.cli.elements.RemoteInput.rst  backpy.cli.elements.ScheduleInput.rst  backpy.cli.elements.TextInput.rst  backpy.cli.elements._validate_always.rst  backpy.cli.elements._validate_directory_path.rst  backpy.cli.elements._validate_file_path.rst  backpy.cli.elements._validate_float.rst  backpy.cli.elements._validate_integer.rst  (+3 more)
scripts/: append_changelog.py  generate_changelog.py
(+122 files in other folders)
